refactor: 형식 통일에 따른 리팩토링