@@ -4,6 +4,7 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import site.travellaboratory.be.domain.article.Article;
 import site.travellaboratory.be.domain.article.Location;
 import site.travellaboratory.be.domain.article.TravelStyle;
@@ -15,24 +16,27 @@ public record ArticleSearchResponse(
         LocalDate endAt,
         String expense,
         String travelCompanion,
-        List<String> travelStyle,
-        String nickname
+        List<String> travelStyles,
+        String nickname,
+        int totalPage,
+        Long totalElements
 ) {
 
-    public static List<ArticleSearchResponse> from(final Page<Article> articles) {
-        return articles.stream()
-                .map(article -> new ArticleSearchResponse(
-                        article.getTitle(),
-                        article.getLocation(),
-                        article.getStartAt(),
-                        article.getEndAt(),
-                        article.getExpense(),
-                        article.getTravelCompanion().getName(),
-                        article.getTravelStyles().stream()
-                                .map(TravelStyle::getName)
-                                .collect(Collectors.toList()),
-                        article.getNickname()
-                ))
-                .toList();
+    public static Page<ArticleSearchResponse> from(final Page<Article> articles) {
+        return articles.map(article -> new ArticleSearchResponse(
+                article.getTitle(),
+                article.getLocation(),
+                article.getStartAt(),
+                article.getEndAt(),
+                article.getExpense(),
+                article.getTravelCompanion().getName(),
+                article.getTravelStyles().stream()
+                        .map(TravelStyle::getName)
+                        .collect(Collectors.toList()),
+                article.getNickname(),
+                articles.getTotalPages(),
+                articles.getTotalElements()
+        ));
     }
+
 }
